# plone-pgthumbor

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: release.yaml  tests.yaml
development/: docker-compose.yml
development/nginx/: default.conf
development/plone/: Dockerfile
development/thumbor/: Dockerfile
docs/.vale/styles/config/vocabularies/Project/: accept.txt
docs/sources/: conf.py  index.md  llms.txt
docs/sources/_static/: site.webmanifest
docs/sources/_templates/: layout.html
docs/sources/_templates/partials/: extra-head.html
docs/sources/explanation/: architecture.md  cloud-native.md  index.md  security.md  why-thumbor.md
docs/sources/how-to/: configure-plone.md  configure-thumbor.md  deploy-production.md  develop.md  enable-s3-fallback.md  index.md  install.md  integrate-imagecropping.md  purge-legacy-scales.md  release.md  write-crop-provider.md
docs/sources/reference/: changelog.md  configuration.md  docker-image.md  index.md  rest-api.md  url-format.md
docs/sources/tutorials/: index.md  quickstart-docker.md
docs/superpowers/plans/: 2026-04-13-hosting-aware-thumbor-urls.md
example/: docker-compose.yml
example/plone/: Dockerfile
example/thumbor/: Dockerfile  thumbor.conf
scripts/: purge_legacy_scales.py
src/plone/pgthumbor/: blob.py  config.py  configure.zcml  controlpanel.py  interfaces.py  overrides.zcml  purge_scales.py  restapi.py  scaling.py  setuphandlers.py  storage.py  url.py
src/plone/pgthumbor/addons_compat/: imagecropping.py  imagecropping.zcml
src/plone/pgthumbor/profiles/default/: browserlayer.xml  controlpanel.xml  metadata.xml  registry.xml
src/plone/pgthumbor/profiles/uninstall/: browserlayer.xml  controlpanel.xml
tests/: conftest.py  test_auth_service.py  test_blob.py  test_config.py  test_controlpanel.py  test_imagecropping.py  test_integration.py  test_purge_scales.py  test_scaling.py  test_setuphandlers.py  test_storage.py  test_upgrade.py  test_url.py
tryout/: docker-compose.yml
tryout/nginx/: default.conf
tryout/plone/: Dockerfile  zope.conf
tryout/thumbor/: Dockerfile
