[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "plone.pgthumbor"
dynamic = ["version"]
description = "Thumbor image scaling for Plone — replaces in-ZODB scales with Thumbor URLs"
readme = "README.md"
license = "GPL-2.0-only"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Plone",
    "Framework :: Plone :: 6.2",
    "Framework :: ZODB",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "libthumbor>=2.0",
    "plone.namedfile",
    "plone.scale>=5.0.0a1",
    "ZODB",
    "zodb-pgjsonb>=1.1",
]

[project.entry-points."z3c.autoinclude.plugin"]
target = "plone"

[project.urls]
Homepage = "https://github.com/bluedynamics/plone-pgthumbor"
Repository = "https://github.com/bluedynamics/plone-pgthumbor"
Changelog = "https://github.com/bluedynamics/plone-pgthumbor/blob/main/CHANGES.md"
Issues = "https://github.com/bluedynamics/plone-pgthumbor/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "coverage[toml]>=7.0",
]

[tool.hatch.build.targets.sdist]
exclude = ["example/"]

[tool.hatch.build.targets.wheel]
packages = ["src/plone"]

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
parallel = true
source_pkgs = ["plone.pgthumbor"]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py312"
extend-exclude = ["example"]

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "E",
    "F",
    "I",
    "RUF",
    "SIM",
    "T20",
    "UP",
    "W",
]
ignore = [
    "E501",
    "RUF001",
    "RUF002",
    "SIM105",
]

[tool.ruff.lint.isort]
force-single-line = true
from-first = true
lines-after-imports = 2
lines-between-types = 1
no-sections = true
order-by-type = false

[tool.ruff.lint.pycodestyle]
max-line-length = 120
max-doc-length = 120
